--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "8.18.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.1.6"
   }
 }
