--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 
 MONGODB_URL=****
 
-CLIENT_URL = http://localhost:3000
-CLIENT_URLL = https://streaming-app-one.vercel.app
+CLIENT_URLL = http://localhost:3000
+CLIENT_URL = https://streaming-app-one.vercel.app
 
 ACCESS_TOKEN_SECRET = bcSsjx3$b$ffeRLTq6*Fmsp2EjYUf~35Ge
 REFRESH_TOKEN_SECRET = YecH%BVnn6z5c$N2!AV^man&a!e&+Xc9>S?t-@Bptj*Ur*tRYgAs%59fq?382LH8hU.B@n^U65E
@@ -17,17 +17,6 @@ CLOUD_NAME = ***
 CLOUD_API_KEY = ***
 CLOUD_API_SECRET = ***
 GOOGLE_SECRET = XRx=H$aes5X?BN*8:N?s_Uq:TQ9vf-xt@F`,=%6RLR^/
-
-
-
-
-
-
-
-
-
-
-
 
 
 
