--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "nodemailer": "^6.4.14",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
 }
